--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "main.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && chmod 755 build/index.js"
   },
   "keywords": [],
   "author": "",
